--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>War</title>
 </head>
-<button id="new-game">New Game</button>
-  <div id="start-game" class="container"></div> 
-      
-    <button id="player1" type="click">Draw!</button>
-    <span id="output-card1"></span>
-    <button id="player2" type="click">Draw!</button>
-    <span id="output-card2"></span>
+<div class="container">
+  <div id="start-game row justify-content-center">
+  <button class="new-game" id="new-game"><h2>New Game</h2></button>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-5 box">
+      <button id="player1" type="click" disabled="true">Draw!</button>
+    </div>
+    <div class="col-5 box">
+      <button id="robot">Robot:</button>
+    </div>
+  </div>
+  <div class="row justify-content-center" id="card-output">
+    <span class="col-5 box" id="output-card1"></span>
+    <span class="col-5 box" id="output-card2"></span>
   </div>
 
 
-<div id="output-deck"></div>
-<div id="show-errors"></div>
+  <div id="output-deck"></div>
+  <div id="show-errors"></div>
+</div>
 </body>
 </html>
